--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeploy": "npm run build",
-    "homepage": "http://bokim1004.github.io/Analog_Clock"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +42,6 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "homepage": "https://bokim1004.github.io/Analog_Clock"
 }
